--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <div>
 		<button data-ns-test="block-inline-button">Test1</button>
-		<button>Test2</button>  Answer: Inline
+		<button data-ns-test="block-inline-button">Test2</button>  Answer: Inline
 	</div>
 	<div>
 		<div data-ns-test="block-inline-div">Test1</div>
