--- a/main.html
+++ b/main.html
@@ -36,16 +36,15 @@
 	<div>
 		<code data-ns-test="block-inline-code">Test1</code>
 		<code data-ns-test="block-inline-code">Test2</code> Answer: Block
-	
 	</div>
 
 	<div>
 		<h1 data-ns-test="block-inline-h1">Test1</h1>
-		<h1 data-ns-test="block-inline-h1">Test2</h1> Answer: Inline 
+		<h1 data-ns-test="block-inline-h1">Test2</h1> Answer: Block
 	</div>
 	<div>
 		<sup data-ns-test="block-inline-sup">Test1</sup>
-		<sup data-ns-test="block-inline-sup">Test2</sup> Answer: Block
+		<sup data-ns-test="block-inline-sup">Test2</sup> Answer: Inline 
 	</div>
 
 	<div>
