--- a/main.html
+++ b/main.html
@@ -26,7 +26,8 @@
 	</div>
 	<div>
 		<input data-ns-test="block-inline-input" value="Test1"> Test1
-		<input data-ns-test="block-inline-input" value="Test2"> Test2 Answer: 	Inline
+		<input data-ns-test="block-inline-input" value="Test2"> Test2 
+		Answer: Inline
 	</div>
 
 	<div>
