--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 	</div>
 	<div>
 		<code data-ns-test="block-inline-code">Test1</code>
-		<code data-ns-test="block-inline-code">Test2</code> Answer: Block
+		<code data-ns-test="block-inline-code">Test2</code> Answer: Inline 
 	</div>
 
 	<div>
